--- a/src/swy-ui/theme-chalk/src/loading.scss
+++ b/src/swy-ui/theme-chalk/src/loading.scss
@@ -19,23 +19,24 @@
 @include b(loading-mask) {
   position: absolute;
   z-index: 2000;
-  background-color: getCssVar('mask-color');
+  background-color: rgba(getCssVar('bg-color-page'), 0.7);
   margin: 0;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  transition: opacity getCssVar('transition-duration');
+  transition: opacity 0.3s;
+  backdrop-filter: blur(5px);
 
   @include when(fullscreen) {
     position: fixed;
 
     .#{$namespace}-loading-spinner {
-      margin-top: calc((0px - getCssVar('loading-fullscreen-spinner-size')) / 2);
+      margin-top: -21px;
 
       .circular {
-        height: getCssVar('loading-fullscreen-spinner-size');
-        width: getCssVar('loading-fullscreen-spinner-size');
+        height: 42px;
+        width: 42px;
       }
     }
   }
@@ -43,21 +44,22 @@
 
 @include b(loading-spinner) {
   top: 50%;
-  margin-top: calc((0px - getCssVar('loading-spinner-size')) / 2);
+  margin-top: -21px;
   width: 100%;
   text-align: center;
   position: absolute;
 
   .#{$namespace}-loading-text {
     color: getCssVar('color-primary');
-    margin: 3px 0;
+    margin: 12px 0 0;
     font-size: 14px;
+    font-weight: 500;
   }
 
   .circular {
-    display: inline;
-    height: getCssVar('loading-spinner-size');
-    width: getCssVar('loading-spinner-size');
+    display: inline-block;
+    height: 42px;
+    width: 42px;
     animation: loading-rotate 2s linear infinite;
   }
 
@@ -65,7 +67,7 @@
     animation: loading-dash 1.5s ease-in-out infinite;
     stroke-dasharray: 90, 150;
     stroke-dashoffset: 0;
-    stroke-width: 2;
+    stroke-width: 3;
     stroke: getCssVar('color-primary');
     stroke-linecap: round;
   }
