--- a/src/swy-ui/theme-chalk/src/notification.scss
+++ b/src/swy-ui/theme-chalk/src/notification.scss
@@ -8,16 +8,15 @@
 
 @include b(notification) {
   display: flex;
+  max-width: calc(100vw - 32px);
   width: 330px;
-  padding: 16px;
-  border-radius: 8px;
+  padding: 14px 24px;
+  border-radius: var(--swy-border-radius-base);
   box-sizing: border-box;
   border: 1px solid getCssVar('border-color-lighter');
   position: fixed;
-  background-color: getCssVar('bg-color', 'page');
-  box-shadow:
-    getCssVar('box-shadow-light'),
-    0 0 30px rgba(0, 0, 0, 0.12);
+  background-color: getCssVar('bg-color-overlay');
+  box-shadow: getCssVar('box-shadow-light');
   transition:
     opacity 0.3s,
     transform 0.3s,
@@ -28,7 +27,6 @@
   overflow-wrap: break-word;
   overflow: hidden;
   z-index: 9999;
-  backdrop-filter: blur(10px);
 
   &.right {
     right: 16px;
@@ -41,8 +39,8 @@
   @include e(group) {
     flex: 1;
     min-width: 0;
-    margin-left: 12px;
-    margin-right: 30px;
+    margin-left: 13px;
+    margin-right: 8px;
   }
 
   @include e(title) {
@@ -64,59 +62,100 @@
     }
   }
 
-  & .#{$namespace}-notification__icon {
-    flex-shrink: 0;
-    height: 20px;
-    width: 20px;
-    font-size: 20px;
+  @include e(icon) {
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
-    line-height: 1;
+    flex-shrink: 0;
+    margin-right: 8px;
 
     @include when(success) {
-      background: getCssVar('color-success-light-9');
       color: getCssVar('color-success');
     }
 
     @include when(warning) {
-      background: getCssVar('color-warning-light-9');
       color: getCssVar('color-warning');
     }
 
     @include when(info) {
-      background: getCssVar('color-info-light-9');
       color: getCssVar('color-info');
     }
 
     @include when(error) {
-      background: getCssVar('color-danger-light-9');
       color: getCssVar('color-danger');
     }
   }
 
-  & .#{$namespace}-notification__closeBtn {
+  @include e(closeBtn) {
     position: absolute;
-    top: 16px;
-    right: 16px;
+    top: 0;
+    right: 0;
     cursor: pointer;
     color: getCssVar('text-color-placeholder');
     font-size: 16px;
-    width: 16px;
-    height: 16px;
+    width: 24px;
+    height: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
 
     &:hover {
-      color: getCssVar('text-color-secondary');
+      color: getCssVar('text-color-primary');
     }
   }
 
-  @each $type in (primary, success, info, warning, error) {
-    & .#{$namespace}-notification--#{$type} {
-      border-left: 4px solid getCssVar('color', $type);
+  @include m(success) {
+    border-color: getCssVar('color-success');
+    background-color: getCssVar('color-success-light-9');
+
+    .#{$namespace}-notification__title {
+      color: getCssVar('color-success');
+    }
+
+    .#{$namespace}-notification__content {
+      color: getCssVar('color-success');
+    }
+  }
+
+  @include m(warning) {
+    border-color: getCssVar('color-warning');
+    background-color: getCssVar('color-warning-light-9');
+
+    .#{$namespace}-notification__title {
+      color: getCssVar('color-warning');
+    }
+
+    .#{$namespace}-notification__content {
+      color: getCssVar('color-warning');
+    }
+  }
+
+  @include m(error) {
+    border-color: getCssVar('color-danger');
+    background-color: getCssVar('color-danger-light-9');
+
+    .#{$namespace}-notification__title {
+      color: getCssVar('color-danger');
+    }
+
+    .#{$namespace}-notification__content {
+      color: getCssVar('color-danger');
+    }
+  }
+
+  @include m(info) {
+    border-color: getCssVar('color-info');
+    background-color: getCssVar('color-info-light-9');
+
+    .#{$namespace}-notification__title {
+      color: getCssVar('color-info');
+    }
+
+    .#{$namespace}-notification__content {
+      color: getCssVar('color-info');
     }
   }
 }
