--- a/src/swy-ui/theme-chalk/src/link.scss
+++ b/src/swy-ui/theme-chalk/src/link.scss
@@ -55,6 +55,12 @@
     }
   }
 
+  & .#{$namespace}-icon {
+    & + span {
+      margin-left: 5px;
+    }
+  }
+
   & [class*='#{$namespace}-icon-'] {
     & + span {
       margin-left: 5px;
